--- a/client/index.html
+++ b/client/index.html
@@ -6,14 +6,20 @@
 		<title>hi</title>
 		<link rel="stylesheet" href="css/style.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
 
 
 	</head>
 	<body>
+
+		<div class="command_input">
+			<input type="text" id="current_message" value="" spellcheck=false />
+			<div id="previous_messages"></div>
+		</div>
+
 		<div class="container">
 			<div class="function_list">
-				<ul>
-				</ul>
+				<ul></ul>
 			</div>
 
 			<div class="function_defining">
