--- a/client/index.html
+++ b/client/index.html
@@ -23,20 +23,23 @@
 			</div>
 
 			<div class="function_defining">
-				public static void
+				void
 				<input type="text" id="f_name" value="" spellcheck=false />
-				(  ){<br>
-
+				(  )<br>
+				{<br>
 				&nbsp&nbsp&nbsp&nbsp
 				<textarea id="f_content" spellcheck=false></textarea>
-				<br>
-				}
+				<br>&nbsp&nbsp&nbsp&nbsp return 0;
+				<br>}
 				<div class="submit_button_wrapper">
-					<button id="submit_button">Submit</button>
+					<button id="submit_button">compile</button>
 				</div>
 				<br>
-
 			</div>
+
+			<div class="function_errors">
+			</div>
+
 		</div>
 		<script src="js/main.js"></script>
 
