Added hacked message and cleaned up a bit of code

--- a/client/index.html
+++ b/client/index.html
@@ -41,6 +41,11 @@
 			</div>
 
 		</div>
+
+		<div class="hacked_container">
+			SERVER ERROR
+		</div>
+
 		<script src="js/main.js"></script>
 
 	</body>
