--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,10 @@
 	</head>
 	<body>
 
+		<div class="arena_container">
+			<!-- <canvas id="canvas"></canvas> -->
+		</div>
+
 		<div class="command_input">
 			<input type="text" id="current_message" value="" spellcheck=false />
 			<div id="previous_messages"></div>
