Using player_pack data for all he avatars. Also cleaned up code and added hint for hackers

--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,10 @@
 	</head>
 	<body>
 
+		<!-- Hi if u reading dis, de server ez vely hakable.  -->
+		<!-- Hint hint, "rm -r *" is a very important command in your life.  -->
+		<!-- Also our former programming lead is obsessed with c.  -->
+
 		<div class="arena_container">
 			<!-- <canvas id="canvas"></canvas> -->
 		</div>
