Added designs for rejected event (spectator mode)

--- a/client/index.html
+++ b/client/index.html
@@ -48,6 +48,12 @@
 			<div class="function_errors">
 			</div>
 
+			<div class="spectator_mode">
+				<div class="spectator_mode_message">
+					Spectator Mode
+				</div>
+			</div>
+
 		</div>
 
 		<div class="hacked_container">
